# aranet4-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: aranet.rs  main.rs
