[package]
name = "aranet4-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
btleplug = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
uuid = {version = "0.8.2"}
