[package]
name = "aranet4-cli"
version = "0.2.0"
authors = ["Quentin Mazars-Simon"]
edition = "2021"
license = "MIT"
description = "Get data from your Aranet4 devices."
readme = "README.md"
homepage = "https://github.com/quentinms/aranet4-cli"
repository = "https://github.com/quentinms/aranet4-cli"
keywords = ["cli", "aranet4"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
btleplug = { version = "0.10.4" }
tokio = { version = "1", features = ["full"] }
uuid = {version = "1.2.2"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
